# mxx

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  codecov.yml  index.html  params.json
cmake/: mxxConfig.cmake
conf/: travis-install-mpi.sh
docs/: Doxyfile.in
experimental/: a.out  buffer.hpp  flat_type.hpp  gcc_segfault.cpp  member_tuple.hpp  new_datatype.hpp  sendrecv.hpp  test_new_datatype.cpp  type_declarations.cpp  type_traits.hpp
ext/: README.md
gtest/: CMakeLists.txt  mpi_gtest.cpp  mxx_eventlistener.hpp  mxx_gtest_main.cpp
include/mxx/: algos.hpp  benchmark.hpp  big_collective.hpp  bitonicsort.hpp  collective.hpp  comm.hpp  comm_def.hpp  comm_fwd.hpp  common.hpp  datatypes.hpp  distribution.hpp  env.hpp  file.hpp  future.hpp  partition.hpp  reduction.hpp  rma.hpp  samplesort.hpp  shift.hpp  sort.hpp  stream.hpp  timer.hpp  type_traits.hpp  utils.hpp
include/old/: collective_old.hpp
src/: CMakeLists.txt  benchmark_a2a.cpp  benchmark_bw.cpp  benchmark_p2p_bw.cpp  benchmark_sort.cpp  pbs_run.sh  vote_off.cpp
test/: CMakeLists.txt  benchmark_sort.cpp  benchmarks.cpp  mpi_gtest.cpp  reduce.cpp  test_all.cpp  test_bigall2all.cpp  test_bucketing.cpp  test_collective.cpp  test_distribution.cpp  test_file.cpp  test_reductions.cpp  test_scat.cpp  test_scatter.cpp  test_send.cpp  test_sort.cpp  test_typetraits.cpp
